# Battleship

./: CMakeLists.txt
src/: computer.cpp  computer.h  computer.hpp  game.cpp  game.h  grid.cpp  grid.h  grid.hpp  human.cpp  human.h  human.hpp  main.cpp  main.h  menu.cpp  menu.h  pair.cpp  pair.h  player.cpp  player.h  player.hpp
